support oceanbase vector store